# gguf-runner

./: Cargo.toml  LiquidAI_LFM2-VL-450M-GGUF_LFM2-VL-450M-Q4_0.gguf.etag  LiquidAI_LFM2-VL-450M-GGUF_mmproj-LFM2-VL-450M-Q8_0.gguf.etag  README.md
.github/workflows/: just-winarm64-compile  just-winarm64-compile.yml  pull-request.yml  push.yml  release.yml
docs/: distributed-moe-plan.md  embedded-tools.md  features.md  lfm2-vl-support-plan.md  model-investigation-2026-05.md  module-structure.md  performance.md  rag-dedup-analysis.md  rag-dedup-history.md  rag.md  run-rag-dedup-analysis.sh  run-tokenizer-bench.sh  tokenizer-benchmark-history.md  tokenizer-benchmark.md  turboquant.md
examples/: always_tools_test.rs  gguf_dump.rs  multiturn_test.rs  sysprompt_test.rs
scripts/: validate-batch-prefill.sh  validate-prefill-cache.sh
src/: cli.rs  lib.rs  main.rs  tools.rs
src/app/: agent.rs  embed.rs  events.rs  generation.rs  mod.rs  prefill_cache.rs  repl.rs
src/engine/: profiling.rs  switches.rs  types.rs  weights.rs
src/engine/io/: gguf.rs  mod.rs
src/engine/kernels/: math.rs  quant.rs
src/engine/multimodal/: idefics3.rs  injection.rs  mod.rs
src/engine/runtime/: inference.rs  mod.rs
src/engine/tokenizer/: mod.rs
src/rag/: chunker.rs  encoder.rs  index_io.rs  mod.rs
src/vendors/: gemma.rs  llama.rs  mod.rs  qwen2.rs  qwen3.rs  qwen35.rs  qwen3next.rs  qwen3vl.rs  qwen_common.rs  smolvlm.rs
