[package]
name = "gguf-runner"
version = "0.5.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "gguf-runner"
path = "src/main.rs"

[lib]
name = "gguf_runner"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[dependencies]
rayon = "1.12"
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
fancy-regex = "0.18"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3.13"
